[sc-7600] Update subscriptions page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -115,7 +115,6 @@
 	"activity.search": "Queries",
 	"activity.timestamp": "Time stamp",
 	"billing.address": "Address",
-	"billing.already_available": "Already available",
 	"billing.amount": "Amount",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
 	"billing.billing_details": "Billing details",
@@ -132,8 +131,8 @@
 	"billing.company_address": "Company address",
 	"billing.contact": "Contact us",
 	"billing.contact_name": "Contact name",
-	"billing.cost_over_limits": "Cost over limits",
-	"billing.cost_over_limits_description": "If you exceed the limits on the payment tiers, the cost per usage will be applied",
+	"billing.cost_per_consumption": "Costs per consumption",
+	"billing.cost_per_consumption_help": "Calculate your cost per usage",
 	"billing.country": "Country",
 	"billing.current-over-cost": "Current over cost",
 	"billing.current-over-cost-help": "The invoice with final over costs will be sent to you on the day your billing cycle ends.",
@@ -165,6 +164,7 @@
 	"billing.free": "Free",
 	"billing.history.link": "History",
 	"billing.history.title": "Account billing history",
+	"billing.hosting": "Hosting",
 	"billing.hour": "hour",
 	"billing.hours": "hours",
 	"billing.ingestion_cost.title": "Ingestion costs",
@@ -173,20 +173,21 @@
 	"billing.invalid_vat": "Please add the country code. e.g: ESB000000N",
 	"billing.month": "Month",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
-	"billing.monthly_estimation.title": "Overconsumption is estimated to cost",
+	"billing.monthly_estimation.title": "Monthly consumption is estimated to cost",
 	"billing.my-subscription": "My subscription",
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
+	"billing.on_premise_cost": "With <b>NucliaDB On-prem</b> does not carry any extra cost.",
 	"billing.order_number": "Order number",
-	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocs",
+	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocks",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
-	"billing.parameter.paragraphs": "How many stored text blocs?",
+	"billing.parameter.paragraphs": "How many stored text blocks?",
 	"billing.parameter.paragraphs_processed": "How many processed text blocks?",
-	"billing.parameter.predict": "How many predicts?",
+	"billing.parameter.predict": "How many classification queries?",
 	"billing.parameter.qa": "How many generative answers?",
-	"billing.parameter.searches": "How many searches?",
+	"billing.parameter.searches": "How many semantic search queries?",
 	"billing.parameter.training": "How many hours of training?",
 	"billing.payment_details": "Payment details",
 	"billing.payment_method": "Payment method",
@@ -195,15 +196,15 @@
 	"billing.postal_code": "ZIP",
 	"billing.quotas.files": "Maximum number of files",
 	"billing.quotas.files-up-to": "Files up to",
-	"billing.quotas.generative": "Generative answer",
+	"billing.quotas.generative": "Generative query",
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of Knowledge Boxes",
 	"billing.quotas.media": "Video & audio indexing",
 	"billing.quotas.paragraphs": "Text block stored",
 	"billing.quotas.paragraphs_processed": "Number of text blocks",
-	"billing.quotas.predict": "Predicts",
-	"billing.quotas.search_inference": "Search / Inference",
-	"billing.quotas.searches": "Searches",
+	"billing.quotas.predict": "Classification query",
+	"billing.quotas.search": "Search",
+	"billing.quotas.searches": "Semantic search query",
 	"billing.quotas.storage": "Storage",
 	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Training",
