--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -115,7 +115,6 @@
 	"activity.search": "Consultas",
 	"activity.timestamp": "Carimbo de hora",
 	"billing.address": "Endereço",
-	"billing.already_available": "Já disponível",
 	"billing.amount": "Montante",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">entre em contato conosco</a> para obter assistência.",
 	"billing.billing_details": "Detalhes de cobrança",
@@ -132,8 +131,8 @@
 	"billing.company_address": "Endereço da companhia",
 	"billing.contact": "Contate-Nos",
 	"billing.contact_name": "Nome de contato",
-	"billing.cost_over_limits": "Custo acima dos limites",
-	"billing.cost_over_limits_description": "Se você exceder os limites dos níveis de pagamento, o custo por uso será aplicado",
+	"billing.cost_per_consumption": "Custos por consumo",
+	"billing.cost_per_consumption_help": "Calcule seu custo por uso",
 	"billing.country": "País",
 	"billing.current-over-cost": "Corrente acima do custo",
 	"billing.current-over-cost-help": "A fatura com os custos excedentes finais será enviada a você no dia em que seu ciclo de faturamento terminar.",
@@ -165,6 +164,7 @@
 	"billing.free": "Livre",
 	"billing.history.link": "História",
 	"billing.history.title": "Histórico de faturamento da conta",
+	"billing.hosting": "Hospedagem",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost.title": "Custos de ingestão",
@@ -173,10 +173,11 @@
 	"billing.invalid_vat": "Adicione o código do país. por exemplo: ESB000000N",
 	"billing.month": "Mês",
 	"billing.monthly_estimation.description": "O custo estimado fornecido baseia-se nos valores definidos e está sujeito a alterações caso estes valores sejam modificados.",
-	"billing.monthly_estimation.title": "Estima-se que o consumo excessivo custe",
+	"billing.monthly_estimation.title": "O consumo mensal está estimado em custo",
 	"billing.my-subscription": "Minha assinatura",
 	"billing.next-payment": "Próximo pagamento",
 	"billing.not_company": "Eu não sou uma empresa",
+	"billing.on_premise_cost": "Com o <b>NucliaDB On-prem</b> não há nenhum custo extra.",
 	"billing.order_number": "Número do pedido",
 	"billing.paragraphs_per_file": "Um arquivo de texto de 10 páginas contém aproximadamente 300 blocos de texto",
 	"billing.parameter.files": "Quantos documentos?",
@@ -184,9 +185,9 @@
 	"billing.parameter.media": "Quantas horas de vídeos/áudios?",
 	"billing.parameter.paragraphs": "Quantos blocos de texto armazenados?",
 	"billing.parameter.paragraphs_processed": "Quantos blocos de texto processados?",
-	"billing.parameter.predict": "Quantas previsões?",
+	"billing.parameter.predict": "Quantas consultas de classificação?",
 	"billing.parameter.qa": "Quantas respostas generativas?",
-	"billing.parameter.searches": "Quantas pesquisas?",
+	"billing.parameter.searches": "Quantas pesquisas semânticas?",
 	"billing.parameter.training": "Quantas horas de treinamento?",
 	"billing.payment_details": "Detalhes do pagamento",
 	"billing.payment_method": "Método de pagamento",
@@ -195,15 +196,15 @@
 	"billing.postal_code": "Fecho eclair",
 	"billing.quotas.files": "Número máximo de arquivos",
 	"billing.quotas.files-up-to": "Arquivos até",
-	"billing.quotas.generative": "Resposta generativa",
+	"billing.quotas.generative": "Consulta gerativa",
 	"billing.quotas.ingestion": "Ingestão",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexação de vídeo e áudio",
 	"billing.quotas.paragraphs": "Bloco de texto armazenado",
 	"billing.quotas.paragraphs_processed": "Número de blocos de texto",
-	"billing.quotas.predict": "Prevê",
-	"billing.quotas.search_inference": "Pesquisa / Inferência",
-	"billing.quotas.searches": "Pesquisas",
+	"billing.quotas.predict": "Consulta de classificação",
+	"billing.quotas.search": "Pesquisa",
+	"billing.quotas.searches": "Consulta de pesquisa semântica",
 	"billing.quotas.storage": "Armazenamento",
 	"billing.quotas.train": "Trem",
 	"billing.quotas.training": "Treinamento",
