--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -177,7 +177,7 @@
 	"billing.my-subscription": "La meva subscripció",
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
-	"billing.on_premise_cost": "Amb <b>NucliaDB On-prem</b> no comporta cap cost addicional.",
+	"billing.on_premise_cost": "Amb <strong>NucliaDB On-prem</strong> no comporta cap cost addicional.",
 	"billing.order_number": "Número de comanda",
 	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 blocs de text",
 	"billing.parameter.files": "Quants documents?",
