--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -178,7 +178,7 @@
 	"billing.my-subscription": "My subscription",
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
-	"billing.on_premise_cost": "With <b>NucliaDB On-prem</b> does not carry any extra cost.",
+	"billing.on_premise_cost": "With <strong>NucliaDB On-prem</strong> does not carry any extra cost.",
 	"billing.order_number": "Order number",
 	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocks",
 	"billing.parameter.files": "How many documents?",
