--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -177,7 +177,7 @@
 	"billing.my-subscription": "Mi suscripción",
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
-	"billing.on_premise_cost": "Con <b>NucliaDB On-prem</b> no conlleva ningún coste extra.",
+	"billing.on_premise_cost": "Con <strong>NucliaDB On-prem</strong> no conlleva ningún coste extra.",
 	"billing.order_number": "Número de pedido",
 	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 bloques de texto.",
 	"billing.parameter.files": "¿Cuántos documentos?",
