[sc-7600] Update subscriptions page (#1124)
* [sc-7600] Update subscriptions page

* Revert deletion

* Fix

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -114,7 +114,6 @@
 	"activity.search": "Consultes",
 	"activity.timestamp": "Segell de temps",
 	"billing.address": "Adreça",
-	"billing.already_available": "Ja disponible",
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
@@ -131,8 +130,9 @@
 	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacte",
-	"billing.cost_over_limits": "Cost al superar els límits",
-	"billing.cost_over_limits_description": "Si supereu els límits del nivell de pagament, s'aplicarà el cost per ús.",
+	"billing.cost_over_limits": "Cost per sobre dels límits",
+	"billing.cost_per_consumption": "Costos per consum",
+	"billing.cost_per_consumption_help": "Calcula el teu cost per ús",
 	"billing.country": "País",
 	"billing.current-over-cost": "Sobrecost actual",
 	"billing.current-over-cost-help": "La factura amb els sobrecostos definitius s'enviarà el dia que finalitzi el cicle de facturació.",
@@ -164,6 +164,7 @@
 	"billing.free": "Gratuït",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturació",
+	"billing.hosting": "Allotjament",
 	"billing.hour": "hora",
 	"billing.hours": "hores",
 	"billing.ingestion_cost.title": "Costos d'ingestió",
@@ -172,10 +173,11 @@
 	"billing.invalid_vat": "Si us plau, afegiu el codi del país. Ex: ESB000000N",
 	"billing.month": "Mes",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
-	"billing.monthly_estimation.title": "S'estima que el sobreconsum tindrà un cost de",
+	"billing.monthly_estimation.title": "S'estima que el consum mensual té un cost de",
 	"billing.my-subscription": "La meva subscripció",
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
+	"billing.on_premise_cost": "Amb <strong>NucliaDB On-prem</strong> no comporta cap cost addicional.",
 	"billing.order_number": "Número de comanda",
 	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 blocs de text",
 	"billing.parameter.files": "Quants documents?",
@@ -183,9 +185,9 @@
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
 	"billing.parameter.paragraphs": "Quants blocs de text emmagatzemats?",
 	"billing.parameter.paragraphs_processed": "Quants blocs de text processats?",
-	"billing.parameter.predict": "Quantes prediccions?",
+	"billing.parameter.predict": "Quantes consultes de classificació?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
-	"billing.parameter.searches": "Quantes cerques?",
+	"billing.parameter.searches": "Quantes cerques semàntiques?",
 	"billing.parameter.training": "Quantes hores d'entrenament?",
 	"billing.payment_details": "Dades de pagament",
 	"billing.payment_method": "Mètode de pagament",
@@ -194,15 +196,15 @@
 	"billing.postal_code": "Còdi postal",
 	"billing.quotas.files": "Nombre màxim de fitxers",
 	"billing.quotas.files-up-to": "Arxius fins a",
-	"billing.quotas.generative": "Resposta generativa",
+	"billing.quotas.generative": "Consulta generativa",
 	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexació de vídeo i àudio",
 	"billing.quotas.paragraphs": "Bloc de text emmagatzemat",
 	"billing.quotas.paragraphs_processed": "Nombre de blocs de text",
-	"billing.quotas.predict": "Prediccions",
-	"billing.quotas.search_inference": "Cerca / Inferència",
-	"billing.quotas.searches": "Recerques",
+	"billing.quotas.predict": "Consulta de classificació",
+	"billing.quotas.search": "Cerca",
+	"billing.quotas.searches": "Consulta de cerca semàntica",
 	"billing.quotas.storage": "Emmagatzematge",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.training": "Entrenament",
