--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -115,7 +115,6 @@
 	"activity.search": "Abfragen",
 	"activity.timestamp": "Zeitstempel",
 	"billing.address": "Adresse",
-	"billing.already_available": "Schon verfügbar",
 	"billing.amount": "Menge",
 	"billing.assistance": "Bitte <a href=\"{{url}}\">kontaktieren Sie uns</a> für Unterstützung.",
 	"billing.billing_details": "Rechnungsdetails",
@@ -133,7 +132,8 @@
 	"billing.contact": "Kontaktiere uns",
 	"billing.contact_name": "Kontaktname",
 	"billing.cost_over_limits": "Kosten über Grenzen",
-	"billing.cost_over_limits_description": "Wenn Sie die Limits der Zahlungsstufen überschreiten, werden die Kosten pro Nutzung berechnet",
+	"billing.cost_per_consumption": "Kosten pro Verbrauch",
+	"billing.cost_per_consumption_help": "Berechnen Sie Ihre Kosten pro Nutzung",
 	"billing.country": "Land",
 	"billing.current-over-cost": "Aktuelle Überkosten",
 	"billing.current-over-cost-help": "Die Rechnung mit den endgültigen Kosten wird Ihnen am Tag des Endes Ihres Abrechnungszeitraums zugesandt.",
@@ -165,6 +165,7 @@
 	"billing.free": "Kostenlos",
 	"billing.history.link": "Geschichte",
 	"billing.history.title": "Abrechnungsverlauf des Kontos",
+	"billing.hosting": "Hosting",
 	"billing.hour": "Stunde",
 	"billing.hours": "Std",
 	"billing.ingestion_cost.title": "Einnahmekosten",
@@ -173,10 +174,11 @@
 	"billing.invalid_vat": "Bitte fügen Sie den Ländercode hinzu. z.B.: ESB000000N",
 	"billing.month": "Monat",
 	"billing.monthly_estimation.description": "Die angegebenen geschätzten Kosten basieren auf den definierten Werten und können sich ändern, wenn diese Werte geändert werden.",
-	"billing.monthly_estimation.title": "Es wird geschätzt, dass übermäßiger Verbrauch Kosten verursacht",
+	"billing.monthly_estimation.title": "Der monatliche Verbrauch wird auf Kosten geschätzt",
 	"billing.my-subscription": "Mein Abonnement",
 	"billing.next-payment": "Nächste Zahlung",
 	"billing.not_company": "Ich bin kein Unternehmen",
+	"billing.on_premise_cost": "Mit <strong>NucliaDB On-prem</strong> fallen keine zusätzlichen Kosten an.",
 	"billing.order_number": "Bestellnummer",
 	"billing.paragraphs_per_file": "Eine 10-seitige Textdatei enthält etwa 300 Textblöcke",
 	"billing.parameter.files": "Wie viele Dokumente?",
@@ -184,9 +186,9 @@
 	"billing.parameter.media": "Wie viele Stunden Videos/Audios?",
 	"billing.parameter.paragraphs": "Wie viele gespeicherte Textblöcke?",
 	"billing.parameter.paragraphs_processed": "Wie viele verarbeitete Textblöcke?",
-	"billing.parameter.predict": "Wie viele Vorhersagen?",
+	"billing.parameter.predict": "Wie viele Klassifizierungsabfragen?",
 	"billing.parameter.qa": "Wie viele generative Antworten?",
-	"billing.parameter.searches": "Wie viele Suchanfragen?",
+	"billing.parameter.searches": "Wie viele semantische Suchen?",
 	"billing.parameter.training": "Wie viele Stunden Training?",
 	"billing.payment_details": "Zahlungsdetails",
 	"billing.payment_method": "Zahlungsmethode",
@@ -195,15 +197,15 @@
 	"billing.postal_code": "Postleitzahl",
 	"billing.quotas.files": "Maximale Anzahl von Dateien",
 	"billing.quotas.files-up-to": "Dateien bis zu",
-	"billing.quotas.generative": "Generative Antwort",
+	"billing.quotas.generative": "Generative Abfrage",
 	"billing.quotas.ingestion": "Einnahme",
 	"billing.quotas.kbs": "Anzahl der Knowledge Boxes",
 	"billing.quotas.media": "Video- und Audioindizierung",
 	"billing.quotas.paragraphs": "Textblock gespeichert",
 	"billing.quotas.paragraphs_processed": "Anzahl der Textblöcke",
-	"billing.quotas.predict": "Prognostiziert",
-	"billing.quotas.search_inference": "Suche / Schlussfolgerung",
-	"billing.quotas.searches": "Suchen",
+	"billing.quotas.predict": "Klassifizierungsabfrage",
+	"billing.quotas.search": "Suche",
+	"billing.quotas.searches": "Semantische Suchanfrage",
 	"billing.quotas.storage": "Lager",
 	"billing.quotas.train": "Zug",
 	"billing.quotas.training": "Ausbildung",
