--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -114,7 +114,6 @@
 	"activity.search": "Consultas",
 	"activity.timestamp": "Sello de tiempo",
 	"billing.address": "Dirección",
-	"billing.already_available": "Ya disponible",
 	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
@@ -132,7 +131,8 @@
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacto",
 	"billing.cost_over_limits": "Coste al exceder los límites",
-	"billing.cost_over_limits_description": "Si excede los límites del nivel de pago, se aplicará el costo por uso.",
+	"billing.cost_per_consumption": "Costes por consumo",
+	"billing.cost_per_consumption_help": "Calcule su costo por uso",
 	"billing.country": "País",
 	"billing.current-over-cost": "Sobrecoste actual",
 	"billing.current-over-cost-help": "La factura con los sobrecostes definitivos se te enviará el día que finalice tu ciclo de facturación.",
@@ -164,6 +164,7 @@
 	"billing.free": "Gratuito",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturación",
+	"billing.hosting": "Alojamiento",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost.title": "Costos de ingestión",
@@ -172,10 +173,11 @@
 	"billing.invalid_vat": "Por favor agregue el código de país. Por ejemplo: ESB000000N",
 	"billing.month": "Mes",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
-	"billing.monthly_estimation.title": "Se estima que el sobreconsumo costará",
+	"billing.monthly_estimation.title": "Se estima que el consumo mensual cuesta",
 	"billing.my-subscription": "Mi suscripción",
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
+	"billing.on_premise_cost": "Con <strong>NucliaDB On-prem</strong> no conlleva ningún coste extra.",
 	"billing.order_number": "Número de pedido",
 	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 bloques de texto.",
 	"billing.parameter.files": "¿Cuántos documentos?",
@@ -183,9 +185,9 @@
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
 	"billing.parameter.paragraphs": "¿Cuántos bloques de texto almacenados?",
 	"billing.parameter.paragraphs_processed": "¿Cuántos bloques de texto procesados?",
-	"billing.parameter.predict": "¿Quantes predicciones?",
+	"billing.parameter.predict": "¿Cuántas consultas de clasificación?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
-	"billing.parameter.searches": "¿Cuántas búsquedas?",
+	"billing.parameter.searches": "¿Cuántas búsquedas semánticas?",
 	"billing.parameter.training": "¿Cuántas horas de entrenamientos?",
 	"billing.payment_details": "Datos de pago",
 	"billing.payment_method": "Método de pago",
@@ -194,15 +196,15 @@
 	"billing.postal_code": "Código postal",
 	"billing.quotas.files": "Cantidad máxima de archivos",
 	"billing.quotas.files-up-to": "Archivos hasta",
-	"billing.quotas.generative": "Respuesta generativa",
+	"billing.quotas.generative": "Consulta generativa",
 	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexación de video y audio",
 	"billing.quotas.paragraphs": "Bloque de texto almacenado",
 	"billing.quotas.paragraphs_processed": "Número de bloques de texto",
-	"billing.quotas.predict": "Predicciones",
-	"billing.quotas.search_inference": "Búsqueda / Inferencia",
-	"billing.quotas.searches": "Búsquedas",
+	"billing.quotas.predict": "Consulta de clasificación",
+	"billing.quotas.search": "Búsqueda",
+	"billing.quotas.searches": "Consulta de búsqueda semántica",
 	"billing.quotas.storage": "Almacenamiento",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.training": "Entrenamiento",
