--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -115,7 +115,6 @@
 	"activity.search": "Requêtes",
 	"activity.timestamp": "Horodatage",
 	"billing.address": "Adresse",
-	"billing.already_available": "Déjà disponible",
 	"billing.amount": "Montant",
 	"billing.assistance": "Veuillez <a href=\"{{url}}\">nous contacter</a> pour obtenir de l'aide.",
 	"billing.billing_details": "Détails de la facturation",
@@ -133,7 +132,8 @@
 	"billing.contact": "Contactez nous",
 	"billing.contact_name": "Nom du contact",
 	"billing.cost_over_limits": "Coût dépassant les limites",
-	"billing.cost_over_limits_description": "Si vous dépassez les limites des niveaux de paiement, le coût par utilisation sera appliqué",
+	"billing.cost_per_consumption": "Coûts par consommation",
+	"billing.cost_per_consumption_help": "Calculez votre coût par utilisation",
 	"billing.country": "Pays",
 	"billing.current-over-cost": "Surcoût actuel",
 	"billing.current-over-cost-help": "La facture avec les surcoûts finaux vous sera envoyée le jour de la fin de votre cycle de facturation.",
@@ -165,6 +165,7 @@
 	"billing.free": "Libre",
 	"billing.history.link": "L'histoire",
 	"billing.history.title": "Historique de facturation du compte",
+	"billing.hosting": "Hébergement",
 	"billing.hour": "heure",
 	"billing.hours": "heures",
 	"billing.ingestion_cost.title": "Coûts d'ingestion",
@@ -173,10 +174,11 @@
 	"billing.invalid_vat": "Veuillez ajouter le code du pays. par exemple : ESB000000N",
 	"billing.month": "Mois",
 	"billing.monthly_estimation.description": "Le coût estimé fourni est basé sur les valeurs définies et est susceptible de changer si ces valeurs sont modifiées.",
-	"billing.monthly_estimation.title": "On estime que la surconsommation coûte",
+	"billing.monthly_estimation.title": "La consommation mensuelle est estimée à",
 	"billing.my-subscription": "Mon abonnement",
 	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
+	"billing.on_premise_cost": "Avec <strong>NucliaDB On-prem</strong> n’entraîne aucun coût supplémentaire.",
 	"billing.order_number": "Numéro de commande",
 	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 blocs de texte",
 	"billing.parameter.files": "Combien de documents ?",
@@ -184,9 +186,9 @@
 	"billing.parameter.media": "Combien d'heures de vidéos/audios ?",
 	"billing.parameter.paragraphs": "Combien de blocs de texte stockés ?",
 	"billing.parameter.paragraphs_processed": "Combien de blocs de texte traités ?",
-	"billing.parameter.predict": "Combien de prédictions ?",
+	"billing.parameter.predict": "Combien de requêtes de classement ?",
 	"billing.parameter.qa": "Combien de réponses génératives ?",
-	"billing.parameter.searches": "Combien de recherches ?",
+	"billing.parameter.searches": "Combien de recherches sémantiques ?",
 	"billing.parameter.training": "Combien d'heures de formation ?",
 	"billing.payment_details": "Détails de paiement",
 	"billing.payment_method": "Mode de paiement",
@@ -195,15 +197,15 @@
 	"billing.postal_code": "Zip *: français",
 	"billing.quotas.files": "Nombre maximum de fichiers",
 	"billing.quotas.files-up-to": "Fichiers jusqu'à",
-	"billing.quotas.generative": "Réponse générative",
+	"billing.quotas.generative": "Requête générative",
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexation vidéo et audio",
 	"billing.quotas.paragraphs": "Bloc de texte stocké",
 	"billing.quotas.paragraphs_processed": "Nombre de blocs de texte",
-	"billing.quotas.predict": "Prédictions",
-	"billing.quotas.search_inference": "Recherche / Inférence",
-	"billing.quotas.searches": "Recherches",
+	"billing.quotas.predict": "Requête de classification",
+	"billing.quotas.search": "Recherche",
+	"billing.quotas.searches": "Requête de recherche sémantique",
 	"billing.quotas.storage": "Espace de rangement",
 	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Entraînement",
