[sc-7842] Rename LLM list in Settings

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -645,16 +645,16 @@
 	"stash.config.key.azure_openai": "Azure OpenAI-Schlüssel",
 	"stash.config.key.openai": "OpenAI-Schlüssel",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "ChatGPT OpenAI",
-	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Cohere (Beta)",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.cohere": "Cohere Command (Beta)",
 	"stash.config.option.disabled": "Deaktiviert",
 	"stash.config.option.enabled": "Aktiviert",
 	"stash.config.option.generative-multilingual-2023": "Mehrsprachiges Privatmodell von Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "mehrsprachig (alpha)",
-	"stash.config.option.nuclia-atlas-v1": "Atlas",
-	"stash.config.option.nuclia-etna-v1": "Etna",
-	"stash.config.option.nuclia-everest-v1": "Everest",
+	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
+	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
+	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Eigenen Schlüssel verwenden",
 	"stash.config.success": "Die neuen Einstellungen wurden erfolgreich gespeichert.",
