--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -644,16 +644,16 @@
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "ChatGPT OpenAI",
-	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.cohere": "Cohere Command (beta)",
 	"stash.config.option.disabled": "Desactivat",
 	"stash.config.option.enabled": "Habilitat",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
-	"stash.config.option.nuclia-atlas-v1": "Atlas",
-	"stash.config.option.nuclia-etna-v1": "Etna",
-	"stash.config.option.nuclia-everest-v1": "Everest",
+	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
+	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
+	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilitzar key pròpia",
 	"stash.config.success": "La nova configuració s'ha desat correctament.",
