--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -645,16 +645,16 @@
 	"stash.config.key.azure_openai": "Chave OpenAI do Azure",
 	"stash.config.key.openai": "Chave OpenAI",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "ChatGPT OpenAI",
-	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
-	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.cohere": "Cohere Command (beta)",
 	"stash.config.option.disabled": "Desativado",
 	"stash.config.option.enabled": "Ativado",
 	"stash.config.option.generative-multilingual-2023": "Modelo privado multilíngue Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "multilíngue (alpha)",
-	"stash.config.option.nuclia-atlas-v1": "Atlas",
-	"stash.config.option.nuclia-etna-v1": "Etna",
-	"stash.config.option.nuclia-everest-v1": "Everest",
+	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
+	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
+	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Usar chave própria",
 	"stash.config.success": "As novas configurações foram salvas com sucesso.",
